--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
   <script src="js/jquery-1.9.1.min.js"></script>
   <script src="js/jquery.mobile-1.3.1.min.js"></script>
+  <script src="phonegap.js"></script>
 </head>
 
 <body> 
