--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Access-Control-Allow-Origin" content="*"/>
   <title>Validacion de usuarios</title>
   <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
   <script src="js/jquery-1.9.1.min.js"></script>
